--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,45 @@
-version: '3.1'
+version: '3.4'
 
-service:
-  s_api_gateway:
-    container_name: c_api_gateway
-    image: metytc/apigateway
+services:
+  s_apigateway:
+    container_name: c_apigateway
+    image: salihcantekin/apigateway
     build:
       context: .
       dockerfile: APIGateway/Dockerfile
+    networks:
+      - net_api
+      - int_net_api
     ports:
       - 80:80
-    networks:
-      - micro_net
-      - int_net
 
   s_contact_api:
     container_name: c_contact_api
-    image: metytc/apigateway
+    image: salihcantekin/contactapi
     build:
       context: .
-      dockerfile: Services/ContactAPI/Contact.API/Dockerfile
+      dockerfile: Services/Contact.API/Contact.API/Dockerfile
+    networks:
+      - int_net_api
     ports:
-      - 9000:9000
-    networks: int_net
+      - 7000:7000
 
   s_res_api:
     container_name: c_res_api
-    image: metytc/apigateway
+    image: salihcantekin/resapi
     build:
       context: .
-      dockerfile: Services/ReservationAPI/Reservation.API/Dockerfile
+      dockerfile: Services/Reservation.API/Reservation.API/Dockerfile
+    networks:
+      - int_net_api
     ports:
-      - 7000:7000
-    networks: int_net
-
-
-
-
+      - 7001:7001
 
 
 networks:
-  int_net:
-    driver: oveylay
-    internal: true
-
-  micro_net:
+  net_api:
     driver: bridge
-    
+
+  int_net_api:
+    driver: overlay
+    internal: true
